--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Chris Herzig</title>
+    <title>Taco Cat: A Coding Project By Chris Herzig</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand logoFont" href="#"><img src="img/Logo-Wht.png" alt="Chris Herzig Logo"
-                    class="d-inline-block align-text-top" width="40" height="25"> REWIND</a>
+                    class="d-inline-block align-text-top" width="40" height="25"> Taco Cat</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -57,7 +57,7 @@
             <div class="row row-cols-1 row-cols-lg-2">
                 <div class="col">
                     <h1 class="display-5 fw-bold lh-1 mb-3">
-                        REWIND: A Coding project
+                        Taco Cat: A Coding project
                     </h1>
                     <h4 class="lead pb-3">
                         Here and back agin. A javascript coding exercise using arrays. Write a program that displays a string in reverse.
