--- a/code.html
+++ b/code.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 <link href="css/prism.css" rel="stylesheet">
 <head>
-    <title>Rewind: A Coding Project By Chris Herzig</title>
+    <title>Taco Cat: A Coding Project By Chris Herzig</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand logoFont" href="#"><img src="img/Logo-Wht.png" alt="Chris Herzig Logo"
-                    class="d-inline-block align-text-top" width="40" height="25"> REWIND</a>
+                    class="d-inline-block align-text-top" width="40" height="25"> Taco Cat</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -55,7 +55,7 @@
     <main class="flex-shrink-0">
         <div class="container py-5 px-5">
             <br>
-            <h2 class="border-2 border-bottom border-primary" >The Code for Rewind</h2>
+            <h2 class="border-2 border-bottom border-primary" >The Code for Taco Cat</h2>
             <br>
 <div class="row row-cols-1 row-cols-lg-2">
     <div class="col-lg-8">
