--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Rewind: A Coding Project By Chris Herzig</title>
+    <title>Taco Cat: A Coding Project By Chris Herzig</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand logoFont" href="#"><img src="img/Logo-Wht.png" alt="Chris Herzig Logo"
-                    class="d-inline-block align-text-top" width="40" height="25"> REWIND</a>
+                    class="d-inline-block align-text-top" width="40" height="25"> Taco Cat</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5 fw-bold 1h-1 mb-3">REWIND: A Coding Project</h1>
+                    <h1 class="display-5 fw-bold 1h-1 mb-3">Taco Cat: A Coding Project</h1>
                     <h4 class="lead"><strong>There and back again. A javascript coding exercise using arrays. Write a program that displays a string in reverse.
                     </strong></h4>
                     <ul class="fa-ul pt-2 checklist">
