Writing Js functions

--- a/app.html
+++ b/app.html
@@ -60,15 +60,15 @@
                         Taco Cat: A Coding project
                     </h1>
                     <h4 class="lead pb-3">
-                        Here and back agin. A javascript coding exercise using arrays. Write a program that displays a string in reverse.
+                        Taco Cat is a palindrome. A palindrome is a word, phrase, or sequence that reads the same backward as forward. Write a program that checks if the phrase entered is a palindrome.
                     </h4>
 
                 </div>
                 <div class="col">
-                    <h5 class="border-1 border-bottom border-danger">Enter A String To Reverse.</h5>
+                    <h5 class="border-1 border-bottom border-danger">Enter a phrase or word to check.</h5>
                     <form class="row gx-3 gy-2">
                         <div class="col">
-                            <input id="userString" type="text" class="form-control" placeholder="Enter A String"
+                            <input id="userString" type="text" class="form-control" placeholder="Enter word or phrase."
                             aria-label="Enter A String">
                         </div>
                         <div class="col-12">
