--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
                     <h1 class="display-5 fw-bold 1h-1 mb-3">Taco Cat: A Coding Project</h1>
-                    <h4 class="lead"><strong>There and back again. A javascript coding exercise using arrays. Write a program that displays a string in reverse.
+                    <h4 class="lead"><strong>Taco Cat is a palindrome. A palindrome is a word, phrase, or sequence that reads the same backward as forward. Write a program that checks if the phrase entered is a palindrome.
                     </strong></h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i> </span>CSS and Bootstrap Layout</li>
@@ -66,11 +66,11 @@
                         <li><span class="fa-li"><i class="fas fa-check-square"></i> </span>Javascript Functions</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i> </span>Javascript Dom Manipulation
                         </li>
-                        <li><span class="fa-li"><i class="fas fa-check-square"></i> </span>Javascript Arrays</li>
-                        
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i> </span>Javascript if/then/else</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i> </span>Javascript boolean logic</li>
                     </ul>
                     <div>
-                        <a type="button" class="btn btn-outline-dark btn-lg px-4 me-md-2" href="app.html">Try It Out</a>
+                        <a id="btnTry" class="btn btn-outline-dark btn-lg px-4 me-md-2" href="app.html">Try It Out</a>
                     </div>
                     <h5 class="fw-bold mt-5">
                         <div class="d-flex">
@@ -84,7 +84,7 @@
                     </h5>
                 </div>
                 <div class="col d-flex align-content-center">
-                    <img src="img/rewind tall.png " class="img-fluid center-block d-block mx-auto" alt="App Logo">
+                    <img src="img/Illustrated Delicious Food Restaurant Taco Logo (680 × 727 px).png " class="img-fluid center-block d-block mx-auto" alt="App Logo">
                 </div>
             </div>
         </div>
