--- a/app.html
+++ b/app.html
@@ -75,7 +75,7 @@
                             <button type="button" id="btnSubmit" class="btn btn-danger">Reverse Me</button>
                         </div>
                         <div class="alert alert-danger mt-5 invisible fade show" id="alert" role="alert">
-                            <h4 class="alert-heading">Well Done!</h4>
+                            <h4 id="alertHeader" class="alert-heading">Well Done!</h4>
                             <hr>
                             <p class="mb-0" id="msg">
                                 <!--Insert A Message Here-->
