Added better logo

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://github.com/ScientistZero/Rewind">Git Repo</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/ScientistZero/TacoCat">Git Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="https://www.chrisherzig.com">About</a>
@@ -84,7 +84,7 @@
                     </h5>
                 </div>
                 <div class="col d-flex align-content-center">
-                    <img src="img/Illustrated Delicious Food Restaurant Taco Logo (680 × 727 px).png " class="img-fluid center-block d-block mx-auto" alt="App Logo">
+                    <img src="img/TacoCatNew.png" class="img-fluid center-block d-block mx-auto" alt="App Logo" height="100">
                 </div>
             </div>
         </div>
